# schemaviz

./: .gitignore  chinook.sqlite  pyproject.toml
schemaviz/: __init__.py  lib.py  main.py
tests/: test_schemaviz.py
